--- a/my-python-serverless-project/serverless.yml
+++ b/my-python-serverless-project/serverless.yml
@@ -7,7 +7,28 @@ provider:
 functions:
   function1:
     handler: functions/function1/handler.handler
+    events:
+      - http:
+          path: function1
+          method: GET
+      - http:
+          path: function1
+          method: POST
   function2:
     handler: functions/function2/handler.handler
+    events:
+      - http:
+          path: function2
+          method: GET
+      - http:
+          path: function2
+          method: POST
   function3:
     handler: functions/function3/handler.handler
+    events:
+      - http:
+          path: function3
+          method: GET
+      - http:
+          path: function3
+          method: POST
