--- a/my-python-serverless-project/.github/workflows/deploy.yml
+++ b/my-python-serverless-project/.github/workflows/deploy.yml
@@ -35,4 +35,4 @@ jobs:
           # Your code to expose Lambda functions via API Gateway here.
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }
