--- a/serverless.yml
+++ b/serverless.yml
@@ -6,7 +6,7 @@ provider:
   region: ap-south-1
 functions:
   function1:
-    handler: functions/function1/handler.handler
+    handler: handler.handler
     events:
       - http:
           path: function1
@@ -15,7 +15,7 @@ functions:
           path: function1
           method: POST
   function2:
-    handler: functions/function2/handler.handler
+    handler: handler.handler
     events:
       - http:
           path: function2
@@ -24,7 +24,7 @@ functions:
           path: function2
           method: POST
   function3:
-    handler: functions/function3/handler.handler
+    handler: handler.handler
     events:
       - http:
           path: function3
