--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,5 +15,5 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
         AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
     - name: deploy service
-      run: sam deploy --config-env $SAM_ENV
+      run: $SAM_ENV=main sam deploy --config-env $SAM_ENV
    
