--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,24 +1,27 @@
-name: "Deploy SAM to AWS"
-on: 
+name: Serverless Backend-API-Deployment
+on:
   push:
     branches:
-    - main
-
+      - labcicd
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
-    - name: Deploy to AWS
-      uses: maximilianobz/actions-samdeploy@v1.0.4
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
       with:
-        AWS_REGION: 'ap-south-1'
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-    - name: Deploy service
+        node-version: 14
+ 
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: 14
+    - name: Install Serverless Framework
+      run: npm install -g serverless
+ 
+    - name: Deploy
       run: |
-        SAM_ENV=main
-        sam deploy --config-env $SAM_ENV
+        serverless config credentials --provider aws --key "$secrets.AWS_ACCESS_KEY_ID" --secret "$secrets.AWS_SECRET_ACCESS_KEY"
+        serverless deploy
