--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,30 @@
-name: Serverless Backend-API-Deployment
+name: Deploy Serverless Service
+ 
 on:
   push:
     branches:
       - main
+ 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+ 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: 14
+      - name: Checkout Code
+        uses: actions/checkout@v2
  
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: 14
-    - name: Install Serverless Framework
-      run: npm install -g serverless
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
  
-    - name: Deploy
-      run: |
-        serverless config credentials --provider aws --key "$secrets.AWS_ACCESS_KEY_ID" --secret "$secrets.AWS_SECRET_ACCESS_KEY"
-        serverless deploy
-        
+      - name: Install Serverless Framework
+        run: npm install -g serverless
+ 
+      - name: Deploy Serverless Service
+        run: |
+          cd $GITHUB_WORKSPACE
+          serverless deploy
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
