--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -573,7 +573,7 @@ jobs:
   # Step to clone another repository
   - name: Clone the other repository
     run: |
-      # Replace 'username' with the GitHub username, 'repo' with the repository and branchname with the particular branch's name want to clone.
+      # Replace 'username' with the GitHub username, 'repo' with the repository and 'branchname' with the particular branch's name want to clone.
       git clone git@github.com:username/repo.git -b branchname
 
 
